2004-04-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_epilogue.sgml: Comment out </part> to reflect change
	of 2004-04-19.

2004-04-23  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c: 
	* src/fs/fileio.c: 
	* src/net/net_io.c: 
	* src/load.c: 
	* src/flash.c: 
	* include/redboot.h: Add asserts to check that option arrays
	are not overrun (when used with variable number of options).

2004-04-23  Gary Parnes  <garyp@logicpd.com>

	* src/net/tftp_client.c: The port, if specified by the user,
	is now corrected for endianness issues.

2004-04-19  Gary Thomas  <gary@mlbassoc.com>

	* src/fs/fileio.c: Can't test for CYGPKG_IO_FLASH_BLOCK_DEVICE without
	first testing for CYGPKG_IO_FLASH and including it's pkgconf file.

2004-04-19  John Dallaway  <jld@ecoscentric.com>

	* doc/makefile, doc/redboot_main.sgml: New files to build the RedBoot
	User's Guide as a self-contained document.

	* doc/redboot.sgml: Eliminate <part> tag to build the RedBoot User's
	Guide as a self-contained document.

2004-03-30  Mark Salter  <msalter@redhat.com>

	* src/net/udp.c (__udp_recvfrom_handler): Protect against back-to-back
	duplicate packets.

2004-03-17  Thomas Koeller <thomas.koeller@baslerweb.com>

       * src/fs/fileio.c: Only include IO package headers if required.

2004-03-02  Andrew Dyer  <adyer@righthandtech.com>

	* src/load.c: add -p option to help string and only print it and -h if
	CYGPKG_REDBOOT_NETWORKING is enabled.  Add a CR to the end of the 
	SHORT_DATA message string

2004-02-27  Jani Monoses <jani@iv.ro>

	* src/net/http_client.c: Close connection with abort instead of
	friendly close since for ELF files we don't read the whole content
	but end the connection when the runnable parts are in. The server
	interprets close as it has nothing more to receive, but it still wants
	to send the rest of the file and does that until it times out.
	
2004-02-26  Jani Monoses <jani@iv.ro>

	* src/load.c: